✨ Fix formatting in SCSS and CSS files for consistency and improved readability

--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -114,7 +114,7 @@ body.light-mode {
 
 /*-------------------HEADER----------------------*/
 
-.hero{
+.hero {
   position: fixed;
   z-index: 500;
   display: flex;
@@ -130,12 +130,12 @@ body.light-mode {
   color: #14f6eb;
 }
 
-.codocicon{
+.codocicon {
   height: 6rem;
 }
 
 #sidebar {
-  position:fixed;
+  position: fixed;
   z-index: 600;
   display: flex;
   flex-direction: column;
@@ -152,12 +152,17 @@ body.light-mode {
   margin: 2rem 0 2rem 0;
 }
 
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 li {
   margin: 1rem;
 }
 
 a {
-  
   color: #14f6eb;
   font-size: 1.5rem;
 }
@@ -166,7 +171,7 @@ a:hover {
   color: #fff;
 }
 
-.icons{
+.icons {
   width: 2rem;
 }
 /*----------------------- HOMEPAGE-------------------- */
